Update proto and adapt function names
