# monocle/webapi.py
@@ -7,25 +7,6 @@ from flask import request
 from google.protobuf import json_format as pbjson
 
 
-def search_service(app):
-    from monocle.api import search_suggestions
-    from monocle.search_pb2 import SearchSuggestionsRequest
-    from monocle.search_pb2 import SearchSuggestionsResponse
-
-    def suggestions_stub() -> None:
-        input_data: bytes = request.get_data() or b"{}"
-        input_request: SearchSuggestionsRequest = pbjson.Parse(input_data, SearchSuggestionsRequest())  # type: ignore
-        output_resp: SearchSuggestionsResponse = search_suggestions(input_request)
-        json_resp = pbjson.MessageToJson(output_resp, preserving_proto_field_name=True)
-        return app.response_class(
-            response=json_resp, status=200, mimetype="application/json"
-        )
-
-    app.add_url_rule(
-        "/api/1/suggestions", "Suggestions", suggestions_stub, methods=["GET", "POST"]
-    )
-
-
 def task_data_service(app):
     from monocle.api import task_data_commit, task_data_get_last_updated, task_data_add
     from monocle.task_data_pb2 import TaskDataCommitRequest
